Add Gift Information to ConversationDetail/ Add CheerGift

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ nohup.out
 nreverseproxy/nohup.out
 static/nginx_init/nginx_init
 static/nohup.out
+server.crt
+server.key
+server.csr
+**/cert_ha.pem
+**/key_ha.pem
